hphp/hack/test/typecheck/strict_switch/int_string_arraykey.php.new_exhaustivity.exp
WARN: File "int_string_arraykey.php", line 103, characters 10-12:
This switch case, `0`, occurred before. It will never be matched. (Warn[12019])
  File "int_string_arraykey.php", line 99, characters 10-12:
  This is the original occurrence of the case.
WARN: File "int_string_arraykey.php", line 105, characters 10-10:
This switch case, `0`, occurred before. It will never be matched. (Warn[12019])
  File "int_string_arraykey.php", line 101, characters 10-10:
  This is the original occurrence of the case.
ERROR: File "int_string_arraykey.php", line 56, characters 3-77:
This `switch` case cannot be checked for exhaustivity. Please provide a default. Without a default, when none of the cases match, a runtime exception will be thrown. (Typing[4489])
  File "int_string_arraykey.php", line 56, characters 11-12:
  The scrutinee has type `arraykey` which is not an enum, enum class, enum class label, null, or nullable or tuples of those types.
